--- a/src/assets/style/theme/theme.scss
+++ b/src/assets/style/theme/theme.scss
@@ -115,9 +115,9 @@
     }
   }
   // [布局] 顶栏下面
-  .el-container.d2-theme-container {
+  .d2-theme-container {
     // 侧边栏
-    .el-aside.d2-theme-container-aside {
+    .d2-theme-container-aside {
       // 菜单为空的时候显示的信息
       .menu-empty {
         background: $theme-aside-menu-empty-background-color;
@@ -191,7 +191,7 @@
         }
       }
     }
-    .el-main.d2-theme-container-main {
+    .d2-theme-container-main {
       // 主体部分分为多页面控制器 和主体
       .d2-theme-container-main-header {
         // 多页面控制器
