input组件示例页面

--- a/src/assets/style/theme/theme-base.scss
+++ b/src/assets/style/theme/theme-base.scss
@@ -173,7 +173,7 @@
           }
         }
         // 菜单为空的时候显示的信息
-        .menu-empty {
+        .d2-layout-main-menu-empty {
           height: 160px;
           margin: 10px;
           margin-top: 0px;
