--- a/src/assets/style/theme/theme.scss
+++ b/src/assets/style/theme/theme.scss
@@ -127,7 +127,7 @@
     // 侧边栏
     .d2-theme-container-aside {
       // 菜单为空的时候显示的信息
-      .menu-empty {
+      .d2-layout-main-menu-empty {
         background: $theme-aside-menu-empty-background-color;
         i {
           color: $theme-aside-menu-empty-icon-color;
