--- a/src/assets/style/theme/theme-base.scss
+++ b/src/assets/style/theme/theme-base.scss
@@ -2,6 +2,7 @@
 .d2-layout-header-aside-group {
   height: 100%;
   width: 100%;
+  min-width: 1000px;
   background-size: cover;
   background-position: center;
   overflow: hidden;
