--- a/src/assets/style/theme/theme.scss
+++ b/src/assets/style/theme/theme.scss
@@ -309,11 +309,21 @@
           }
           // 隐形布局组件
           .d2-container-ghost {
-            .d2-container-ghost-header {
-              border: $theme-container-border-outer;
-              &>.el-card__body {
-                background: $theme-container-header-footer-background-color;
-              }
+            .d2-container-ghost__header {
+              border-bottom: $theme-container-border-outer;
+              border-left: $theme-container-border-outer;
+              border-right: $theme-container-border-outer;
+              background: $theme-container-header-footer-background-color;
+              border-bottom-left-radius: 4px;
+              border-bottom-right-radius: 4px;
+            }
+            .d2-container-ghost__footer {
+              border-top: $theme-container-border-outer;
+              border-left: $theme-container-border-outer;
+              border-right: $theme-container-border-outer;
+              background: $theme-container-header-footer-background-color;
+              border-top-left-radius: 4px;
+              border-top-right-radius: 4px;
             }
           }
         }
