--- a/src/assets/style/theme/theme.scss
+++ b/src/assets/style/theme/theme.scss
@@ -294,20 +294,6 @@
             }
           }
           // [组件]
-          // d2-container-card 卡片型
-          .d2-container-card {
-            border: $theme-container-border-outer;
-            border-top: none;
-            background: transparent;
-            &>.el-card__header {
-              border-bottom: $theme-container-border-inner;
-              background: $theme-container-header-footer-background-color;
-            }
-            &>.el-card__body {
-              background: $theme-container-background-color;
-            }
-          }
-          // [组件]
           // d2-container-ghost 隐形布局组件
           .d2-container-ghost {
             .d2-container-ghost__header {
@@ -315,16 +301,12 @@
               border-left: $theme-container-border-outer;
               border-right: $theme-container-border-outer;
               background: $theme-container-header-footer-background-color;
-              border-bottom-left-radius: 4px;
-              border-bottom-right-radius: 4px;
             }
             .d2-container-ghost__footer {
               border-top: $theme-container-border-outer;
               border-left: $theme-container-border-outer;
               border-right: $theme-container-border-outer;
               background: $theme-container-header-footer-background-color;
-              border-top-left-radius: 4px;
-              border-top-right-radius: 4px;
             }
           }
           // [组件]
@@ -335,16 +317,36 @@
               border-left: $theme-container-border-outer;
               border-right: $theme-container-border-outer;
               background: $theme-container-header-footer-background-color;
-              border-bottom-left-radius: 4px;
-              border-bottom-right-radius: 4px;
             }
             .d2-container-ghost-bs__footer {
               border-top: $theme-container-border-outer;
               border-left: $theme-container-border-outer;
               border-right: $theme-container-border-outer;
               background: $theme-container-header-footer-background-color;
-              border-top-left-radius: 4px;
-              border-top-right-radius: 4px;
+            }
+          }
+          // [组件]
+          // d2-container-card 卡片型
+          .d2-container-card {
+            .d2-container-card__header {
+              border-bottom: $theme-container-border-inner;
+              border-left: $theme-container-border-outer;
+              border-right: $theme-container-border-outer;
+              background: $theme-container-header-footer-background-color;
+            }
+            .d2-container-card__body {
+              .d2-container-card__body-inner {
+                background: $theme-container-background-color;
+                border-left: $theme-container-border-outer;
+                border-right: $theme-container-border-outer;
+                border-bottom: $theme-container-border-inner;
+              }
+            }
+            .d2-container-card__footer {
+              border-top: $theme-container-border-inner;
+              border-left: $theme-container-border-outer;
+              border-right: $theme-container-border-outer;
+              background: $theme-container-header-footer-background-color;
             }
           }
         }
