--- a/src/assets/style/theme/theme-base.scss
+++ b/src/assets/style/theme/theme-base.scss
@@ -362,7 +362,8 @@
               .d2-container-card__body {
                 flex-grow: 1;
                 overflow: auto;
-                .d2-container-card__body-inner {
+                .d2-container-card__body-card {
+                  position: relative;
                   margin-bottom: 20px;
                   padding: 20px;
                   border-bottom-left-radius: 4px;
@@ -370,6 +371,39 @@
                 }
               }
               .d2-container-card__footer {
+                padding: 20px;
+                border-top-left-radius: 4px;
+                border-top-right-radius: 4px;
+              }
+            }
+            // 卡片式布局组件 - 滚动优化
+            .d2-container-card-bs {
+              position: absolute;
+              top: 0px;
+              right: 20px;
+              bottom: 0px;
+              left: 0px;
+              display: flex;
+              flex-direction: column;
+              overflow: hidden;
+              .d2-container-card-bs__header {
+                padding: 20px;
+              }
+              .d2-container-card-bs__body {
+                position: relative;
+                flex-grow: 1;
+                overflow: hidden;
+                .d2-container-card-bs__body-wrapper-inner {
+                  padding-bottom: 20px;
+                }
+                .d2-container-card-bs__body-card {
+                  position: relative;
+                  padding: 20px;
+                  border-bottom-left-radius: 4px;
+                  border-bottom-right-radius: 4px;
+                }
+              }
+              .d2-container-card-bs__footer {
                 padding: 20px;
                 border-top-left-radius: 4px;
                 border-top-right-radius: 4px;
