--- a/src/assets/style/theme/theme-base.scss
+++ b/src/assets/style/theme/theme-base.scss
@@ -302,6 +302,7 @@
                 position: relative;
                 .d2-container-full-bs__body-wrapper-inner {
                   padding: 20px;
+                  position: relative;
                 }
               }
               .d2-container-full-bs__footer {
