表格组件示例

--- a/src/assets/style/theme/theme.scss
+++ b/src/assets/style/theme/theme.scss
@@ -4,6 +4,9 @@
   .el-card {
     &.d2-card {
       border: $theme-container-border-outer;
+      .el-card__header {
+        border-bottom: $theme-container-border-outer;
+      }
     }
   }
 
