--- a/src/assets/style/public-class.scss
+++ b/src/assets/style/public-class.scss
@@ -10,6 +10,8 @@
 @import '~@/assets/style/fixed/vue-splitpane.scss';
 // 补丁 vue-grid-layout
 @import '~@/assets/style/fixed/vue-grid-layout.scss';
+// 补丁 tree-view
+@import '~@/assets/style/fixed/tree-view.scss';
 
 // 动画
 @import '~@/assets/style/animate/vue-transition.scss';
