--- a/src/assets/style/theme/theme.scss
+++ b/src/assets/style/theme/theme.scss
@@ -95,6 +95,13 @@
         }
       }
       .el-submenu {
+        &.is-active {
+          .el-submenu__title {
+            color: $theme-header-item-color-active;
+            background: $theme-header-item-background-color-active;
+            i.fa { color: inherit; }
+          }
+        }
         .el-submenu__title {
           transition: border-top-color 0s;
           color: $theme-header-item-color;
