--- a/src/assets/style/fixed/base.scss
+++ b/src/assets/style/fixed/base.scss
@@ -3,7 +3,7 @@
 html, body {
   margin: 0px;
   height: 100%;
-  font-family: "Arial", "Microsoft YaHei", "黑体", "宋体", sans-serif;
+  font-family: "Microsoft YaHei","Arial",  "黑体", "宋体", sans-serif;
   #app {
     @extend %full;
     a {
